2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/papersize.tmac: Improve integration with mm(7) macro
	package.  If a paper format has been selected, set `W` register
	to new line length (if not already set on command line).
	Similarly, set `O` register to 1 inch for the symmetric
	horizontal margins otherwise assumed by this macro file.  This
	means that "groff -mm" and "groff -dpaper=letter -mm" are _not_
	synonymous (when groff is configured to use U.S. letter as the
	default paper format), because groff mm(7) uses a page offset of
	0.963 inches on typesetters for compatibility with DWB mm.
	* NEWS: Add item.

	See discussion in <https://lists.gnu.org/archive/html/\
	groff/2022-11/msg00081.html> and (some) follow-ups.

2022-11-16  Deri James  <deri@chuzzlewit.myzen.co.uk>

	* src/devices/gropdf/gropdf.pl: If the argument to the paper
	format option '-p' matches a recognized format but includes a
	trailing 'L' or 'l' ("legalL" or "a4l", for example), rotate the
	document's MediaBox.

2022-11-16  Deri James  <deri@chuzzlewit.myzen.co.uk>

	* src/devices/gropdf/gropdf.pl: Fix incorrect hotspot placement
	if page is in landscape orientation.
	(FixRect): Perform coordinate transform if page is rotated.
	(Rotate): New function performs relevant trigonometry.

	Fixes <https://savannah.gnu.org/bugs/?63380>.  Thanks to Blake
	McBride for the report.

2022-11-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac: Integrate better with papersize.tmac by no longer
	forcing line (and title) length to 6 inches for typesetters on
	initialization.  Gather default line length from output device
	description, possibly modified later (by other macro file or
	input).  No change to terminal ("nroff mode") output.
	* NEWS: Add item.

2022-11-16  Peter Schaffter <peter@schaffter.ca>

	* tmac/papersize.tmac: If a paper format has been selected,
	smuggle right margin setting to mom(7) if not overridden by the